--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <section class="section1">
             <h1>JUEGO DE MEMORIA</h1>
 
+            <h2 id="resultado"></h2>
+
             <table>
                 <tr>
                     <td><button id="0" onclick="uncap(0)"></button></td>
@@ -52,7 +54,7 @@
         <section class="section2">
 
             <h2 id="aciertos" class="estadisticas">Aciertos: 0</h2>
-            <h2 id="tiempo-restante" class="estadisticas">Tiempo: 30 segundos</h2>
+            <h2 id="tiempo-restante" class="estadisticas">Tiempo: segundos</h2>
             <h2 id="movimiento" class="estadisticas">Movimiento: 0</h2>
         </section>
     </main>
