--- a/Juego-poke/juego.html
+++ b/Juego-poke/juego.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/Juego-poke/style-juego.css">
     <title>Memorama Game</title>
 </head>
 <body>
@@ -12,9 +12,12 @@
     <main>
 
         <section class="section1">
-            <h1>JUEGO DE MEMORIA</h1>
+            <h1>JUEGO DE MEMORIA POKEMON</h1>
 
             <h2 id="resultado"></h2>
+            <h2 id="mensaje"></h2>
+
+            <audio id="audio" src=""></audio>
 
             <table>
                 <tr>
@@ -66,7 +69,7 @@
         </p>
     </footer>
 
-    <script src="/script.js"></script>
+    <script src="/Juego-poke/script-juego.js"></script>
     
 </body>
 </html>
