--- a/Juego-RPG/index-rpg.html
+++ b/Juego-RPG/index-rpg.html
@@ -67,6 +67,8 @@
         <p>
             Juego programado por: 👉 Eduardo Suarez 👾
         </p>
+
+        <button class="button type3" id="menu">MENU</button>
     </footer>
 
     <script src="/Juego-RPG/script-rpg.js"></script>
