--- a/Juego-poke/juego.html
+++ b/Juego-poke/juego.html
@@ -68,6 +68,11 @@
             Juego programado por: 👉 Eduardo Suarez 👾
         </p>
 
+        <button class="button type3" id="volumen">
+            <audio id="music" src="/inicio/Music/gaming-8bit-music-hyperloop-by-infraction-amp-alexi-action-124334.mp3" loop></audio>
+            <img src="/inicio/icon/music2-icon.svg" alt="" srcset="">
+        </button>
+
         <button class="button type3" id="menu">MENU</button>
     </footer>
 
