--- a/inicio/index.html
+++ b/inicio/index.html
@@ -12,12 +12,19 @@
 <body>
 
     <h1>JUEGO MEMORAMA</h1>
-    <h2>Selecciona tematica</h2>
+    <h2>Selecciona una tematica</h2>
 
     <div class="botones">
         <button class="button type3" id="poke">POKEMON</button>
         <button class="button type3" id="rpg">RPG</button>
 
+    </div>
+
+    <div>
+        <button id="volumen">
+            <audio id="music" src="/inicio/Music/gaming-8bit-music-hyperloop-by-infraction-amp-alexi-action-124334.mp3" loop></audio>
+            <img src="/inicio/icon/music-icon .svg" alt="" srcset="">
+        </button>
     </div>
 
     
