--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/inicio/style.css">
+    <link rel="stylesheet" href="./inicio/style.css">
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
     
     <title>Inicio</title>
@@ -22,13 +22,13 @@
 
     <div>
         <button id="volumen">
-            <audio id="music" src="/inicio/Music/gaming-8bit-music-hyperloop-by-infraction-amp-alexi-action-124334.mp3" loop></audio>
-            <img src="/inicio/icon/music-icon .svg" alt="" srcset="">
+            <audio id="music" src="./inicio/Music/gaming-8bit-music-hyperloop-by-infraction-amp-alexi-action-124334.mp3" loop></audio>
+            <img src="./inicio/icon/music-icon .svg" alt="" srcset="">
         </button>
     </div>
 
     
-    <script src="/inicio/script.js"></script>
+    <script src="./inicio/script.js"></script>
 </body>
 
 </html>
