--- a/Juego-RPG/index-rpg.html
+++ b/Juego-RPG/index-rpg.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Juego-RPG/style-rpg.css">
+    <link rel="stylesheet" href="./Juego-RPG/style-rpg.css">
     <title>Memorama Game RPG</title>
 </head>
 <body>
@@ -69,15 +69,15 @@
         </p>
 
         <button class="button type3" id="volumen">
-            <audio id="music" src="/inicio/Music/gaming-8bit-music-hyperloop-by-infraction-amp-alexi-action-124334.mp3" loop></audio>
-            <img src="/inicio/icon/music2-icon.svg" alt="" srcset="">
+            <audio id="music" src="./inicio/Music/gaming-8bit-music-hyperloop-by-infraction-amp-alexi-action-124334.mp3" loop></audio>
+            <img src="./inicio/icon/music2-icon.svg" alt="" srcset="">
         </button>
 
 
         <button class="button type3" id="menu">MENU</button>
     </footer>
 
-    <script src="/Juego-RPG/script-rpg.js"></script>
+    <script src="./Juego-RPG/script-rpg.js"></script>
     
 </body>
 </html>
