--- a/Juego-poke/juego.html
+++ b/Juego-poke/juego.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Juego-poke/style-juego.css">
+    <link rel="stylesheet" href="./style-juego.css">
     <title>Memorama Game</title>
 </head>
 <body>
@@ -76,7 +76,7 @@
         <button class="button type3" id="menu">MENU</button>
     </footer>
 
-    <script src="./Juego-poke/script-juego.js"></script>
+    <script src="./script-juego.js"></script>
     
 </body>
 </html>
